--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
 html, body {
    height: 100%;
    width: 100%;
+   overflow-x: hidden;
 }
 
 #header {
    height: 15vh;
-   width: 100vw;
+   width: 98.89vw;
    justify-content: space-around;
    background-color: rgba(255, 187, 0, 0.937);
    display: flex;
@@ -37,34 +38,35 @@ html, body {
    padding-left: 40px;
 }
 
-#login {
+#register {
    display: flex;
    justify-content: right;
    align-items: center;
    border-radius: 15px;
-   padding: 5px;
-   color: rgb(9, 68, 4);
-   cursor: pointer;
-}
-
-#login:hover {
-   background-color: goldenrod;
-   color: rgb(9, 68, 4);
-}
-
-#sign {
-   justify-content: end;
-   align-items: center;
-   background-color: rgb(155, 62, 62);
-   color: whitesmoke;
-   border-radius: 5px;
-   margin-right: 30px;
    padding: 5px 10px;
+   margin-right: 20px;
+   color: white;
+   cursor: pointer;
+   background-color: rgb(9, 68, 4);
+   border-radius: 5px;
+}
+
+#profile {
+   display: flex;
+   justify-content: right;
+   align-items: center;
+   padding: 5px 10px;
+   margin-right: 20px;
+   color: rgb(155, 62, 62);
    cursor: pointer;
 }
 
-#sign:hover {
-   background-color: rgb(230, 21, 28);
+#profile h5{
+   padding-left: 4px;
+}
+
+#register:hover {
+   background-color: rgb(25, 204, 48);
 }
 
 .vehicle {
@@ -88,8 +90,11 @@ html, body {
    position: relative;
    z-index: 1;
 }
+
 #webBack{
    height: 100vh;
+   overflow-x: hidden;
+   width: 100%;
 }
 
 #page2{
