--- a/aboutus.css
+++ b/aboutus.css
@@ -9,9 +9,11 @@ body {
 
 #about-us {
     background: #ffffff; /* White background for the content section */
-    padding: 50px 20px;
+    padding: 20px 20px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Soft shadow for a lifted look */
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -102,4 +104,5 @@ h1 {
 .thank-you p {
     font-size: 1.1em;
     margin: 10px 0;
+    justify-items: left;
 }
