--- a/style.css
+++ b/style.css
@@ -104,34 +104,42 @@ html, body {
    justify-content: center; 
    align-items: center; 
    gap: 20px; 
-   padding: 20px; 
-   background-color:rgba(18, 106, 124, 0.937); 
-   border-radius: 10px; 
+   background-color:white; 
    box-shadow: 0 4px 10px black;
 }
 
 .container {
-   background-color: #e0e0e0; /* Light grey background for the container */
-   padding: 10px; /* Padding for the container */
-   border-radius: 10px; /* Optional: rounded corners */
-   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional shadow effect */
-   max-width: 100%; /* Ensures the container doesn't overflow */
-   overflow: hidden; /* Hides overflow content if any */
+   width: 100%;
+   height: 100%;
+   display: flex;
+   align-items: center;
+   gap: 10px;
+
+   background-color: #e0e0e0; 
+   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+   max-width: 100%; 
+   overflow: hidden;
+   justify-content: center;
 }
 
 .container img {
-   width: 100%;
+   filter: saturate(0%);
+    width: 10%;
+    height: 100%;
+    object-fit: cover;
+    border: 2px solid white;
+    transition: all ease-out 1s;
+    cursor: pointer;
    max-width: 300px; 
-   height: 100vh;
-   border-radius: 5px; 
+   border-radius: 10px; 
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
    transition: transform 0.3s ease; 
 }
 
 
-.container img:hover {
-   transform: scale(1.05); 
-   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); 
+.container img:hover{
+    filter: saturate(100%);
+    width: 100%;
 }
 
 
